@@ -43,19 +43,18 @@ tinyMCEPopup.onInit.add( ez.fn.bind( eZOEPopupUtils.init, window, {
                 filterOutCustomBlockTags( );
         }
     },
-    tagGenerator: function( tag, customTag, text )
+    tagGenerator: function( tag, customTag )
     {
         if ( customTag === 'underline' )
-            return '<u id="__mce_tmp" type="custom">' + (text ? text : customTag) + '<\/u>';
+            return '<u id="__mce_tmp" type="custom">' + customTag + '<\/u>';
         else if ( ez.$( customTag + '_inline_source' ).el.checked )
-	        return '<span id="__mce_tmp" type="custom">' + (text ? text : customTag) + '<\/span>';
+	        return '<span id="__mce_tmp" type="custom">' + customTag + '<\/span>';
         else
-	        return '<div id="__mce_tmp" type="custom"><p>' + (text ? text : customTag) + '<\/p><\/div>';
+	        return '<div id="__mce_tmp" type="custom"><p>' + customTag + '<\/p><\/div>';
     },
-    onTagGenerated:  function( el, ed, args )
+    onTagGenerated:  function( el, ed, args, text )
     {
         // append a paragraph if user just inserted a custom tag in editor and it's the last tag
-        
         var edBody = el.parentNode, doc = ed.getDoc(), temp = el;
         if ( edBody.nodeName !== 'BODY' )
         {
@@ -68,6 +67,14 @@ tinyMCEPopup.onInit.add( ez.fn.bind( eZOEPopupUtils.init, window, {
             var p = doc.createElement('p');
             p.innerHTML = ed.isIE ? '&nbsp;' : '<br />';
             edBody.appendChild( p );
+        }
+        // set text content if set (selected text prior to generating new tag)
+        if ( text )
+        {
+            if ( el.textContent !== undefined )
+                el.textContent = text;
+            else
+                el.innerText = text;
         }
     },
     tagEditor: function( el, ed, customTag, args )
