@@ -39,7 +39,7 @@ tinyMCEPopup.onInit.add( ez.fn.bind( eZOEPopupUtils.init, window, {
         var slides = ez.$$('div.panel'), navigation = ez.$$('#tabs li.tab');
         slides.accordion( navigation, {duration: 100, transition: ez.fx.sinoidal, accordionAutoFocusTag: 'input[type=text]'}, {opacity: 0, display: 'none'} );
     },
-    tagGenerator: function( tag, customTag, text )
+    tagGenerator: function( tag, customTag )
     {
         return '<img id="__mce_tmp" src="javascript:void(0);" />';
     },
