@@ -11,6 +11,7 @@ eZ Online Editor 5.0 extension Changelog
 * Misc i18n bugs fixed in pol-PL and nor-NO
 * Added tablemenu, a splitbutton that puts all table commands into a sub menu to save menu space.
 * Added support for TinyMCE spellchecker plugin (thx to Carlos Revillo)
+* Fixed #013954: Applying a custom tag to a text can change this text
 
 5.0rc7
 * Changed javascript / stylesheet cache to use 'public/' path
